# philips-academy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: check-openocd.sh  get-wsl-ip.sh  install-openocd.sh  start-openocd-windows.sh
src/bionic_arm/: RobotHand.hpp  main.cpp
src/button/: ButtonLedLogic.cpp  ButtonLedLogic.hpp  CMakeLists.txt  main.cpp
src/single_finger/: RobotHand.cpp  main.cpp
tests/: CMakeLists.txt  MockRobotHand.hpp  test_button_led.cpp  test_robot_hand.cpp
